oct-2023-aws-sg/security.tf
resource "aws_security_group" "webSecurityGroup" {
  name        = "web-security-group"
  description = "Allow port 80 and 443 incoming traffic"
  vpc_id      = var.vpcIdParam

  ingress {
    description = "Allow HTTP"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "Allow HTTPS"
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
